--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -7,5 +7,6 @@
   ],
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "42.0"
+  "sourceApiVersion": "42.0",
+  "FakeParameter": "THIS SHOULD FAIL"
 }
