removed fake parametera

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -7,6 +7,5 @@
   ],
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "42.0",
-  "FakeParameter": "THIS SHOULD FAIL"
+  "sourceApiVersion": "42.0"
 }
